--- a/index.html
+++ b/index.html
@@ -44,9 +44,28 @@
     </form>
 
     <!-- Section -->
-    <article>
-      <div>
-
+    <article class="card-container">
+      <div class="card-header">
+        <img src="/images/kadd-logo.png" alt="logo image here">
+        <p class="company-name">Copy Realm <br> <span>Insurance</span></p>
+      </div>
+      <div class="body">
+      <h4 class="person-name">Chinny Anikwenze <br><span>Copywriter  </span></h4>
+      <!-- First for phone number -->
+      <div class="phone-number">
+        <i class="fa fa-phone" aria-hidden="true"></i>
+        <p>070 6103 1477</p>
+      </div>
+      <!-- Email address -->
+      <div class="email-address">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <p>info@copyrealm.com</p>
+      </div>
+      <!-- Third for address -->
+      <div class="address">
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <p>No 24 enuovuve layout</p>
+      </div>
       </div>
     </article>
   </main>
