More input values

--- a/index.html
+++ b/index.html
@@ -17,54 +17,66 @@
     <!-- Form -->
     <form class="form">
       <!-- Name -->
-      <div>
+      <div class="form-div">
         <label>Full name</label>
         <input type="text" name="full-name" id="full-name">
       </div>
       <!-- Title -->
-      <div>
+      <div class="form-div">
         <label>Title</label>
         <input type="text" name="job-title" id="job-title">
       </div>
+      <!-- Company name -->
+      <div class="form-div">
+        <label>Company Name</label>
+        <input type="text" name="company-name" id="company-name">
+      </div>
       <!-- Phone Number -->
-      <div>
+      <div class="form-div">
         <label>Phone Number</label>
         <input type="number" name="phone-number" id="phone-number">
       </div>
       <!-- Email address -->
-      <div>
+      <div class="form-div">
         <label>Email Address</label>
         <input type="email" name="email-address" id="email-address">
       </div>
       <!-- Address -->
-      <div>
+      <div class="form-div">
         <label>Address</label>
-        <input type="text" name="home-address" id="home-address">
+        <input type="text" name="office-address" id="office-address">
       </div>
     </form>
+
+    <!-- button -->
+    <section>
+      <button class="create-card">create card</button>
+    </section>
+    
 
     <!-- Section -->
     <article class="card-container">
       <div class="card-header">
         <img src="/images/kadd-logo.png" alt="logo image here">
-        <p class="company-name">Copy Realm <br> <span>Insurance</span></p>
+        <p class="company-name"></p>
       </div>
       <div class="body">
-      <h4 class="person-name">Chinny Anikwenze <br><span>Copywriter  </span></h4>
+      <h4 class="person-name"></h4>
+      <p class="job-title">  </p>
       <!-- First for phone number -->
       <div class="phone-number">
         <i class="fa fa-phone" aria-hidden="true"></i>
-        <p>070 6103 1477</p>
+        <p></p>
       </div>
       <!-- Email address -->
       <div class="email-address">
         <i class="fa fa-envelope" aria-hidden="true"></i>
-        <p>info@copyrealm.com</p>
+        <p></p>
       </div>
       <!-- Third for address -->
       <div class="address">
         <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p>No 24 enuovuve layout</p>
+        <p></p>
       </div>
       </div>
     </article>
