--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </header>
 
   <main>
+    <section class="red-alert display-none">
+      <p>Please fill in the forms to continue</p>
+    </section>
     <!-- Form -->
     <form class="form">
       <!-- Name -->
@@ -81,6 +84,9 @@
       </div>
     </article>
   </main>
+  <section>
+    <button class="create-another-card">create another card</button>
+  </section>
  
   <script src="/main.js"></script>
 </body>
