Stopping for now

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
       <div class="form-div">
         <label>Phone Number</label>
         <input type="number" name="phone-number" id="phone-number">
+        <p class="valid-phone-num display-none">Please enter a valid number to continue</p>
+        <p class="phone-num-length display-none">Your number should be 11 digits</p>
       </div>
       <!-- Email address -->
       <div class="form-div">
         <label>Email Address</label>
         <input type="email" name="email-address" id="email-address">
+        <p class="valid-email-address display-none">Please enter a valid email address to continue</p>
       </div>
       <!-- Address -->
       <div class="form-div">
