button responsiveness plus canvas editing, adding the image source for the canvas

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </form>
 
     <!-- button -->
-    <section>
+    <section class="create-card-btn-container">
       <button class="create-card">create card</button>
     </section>
     
@@ -73,6 +73,8 @@
 
     <!-- Section -->
     <p class="click-card-info">Click on card to customize</p>
+
+    <!-- Canvas -->
     <article class="card-container" id="download-card">
       <div class="card-header">
         <img src="/images/kadd-logo.png" alt="logo image here">
@@ -98,7 +100,11 @@
       </div>
       </div>
     </article>
+
   </main>
+<!-- Image to be converted -->
+    <img src="" id="imgConverted" alt="">
+  
   <section class="down-button">
     <button class="create-another-card">Recreate card</button>
     <button class="download-card">Download card</button>
