--- a/index.html
+++ b/index.html
@@ -1,115 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://kit.fontawesome.com/541d852649.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Kadd - business card creator </title>
-</head>
-<body>
-  <header class="header">
-    <h1>Kadd</h1>
-    <p>Create your customized business cards in seconds</p>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/541d852649.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Kadd - business card creator</title>
+  </head>
+  <body>
+    <header class="header">
+      <h1>Kadd</h1>
+      <p>Create your customized business cards in seconds</p>
+    </header>
 
-  <main>
-    <section class="red-alert display-none">
-      <p >Please fill in the forms to continue</p>
+    <main>
+      <section class="red-alert display-none">
+        <p>Please fill in the forms to continue</p>
+      </section>
+
+      <section class="display-none refresh-page">
+        <p>Please refresh page to create another card</p>
+      </section>
+      <!-- Form -->
+      <form class="form">
+        <!-- Name -->
+        <div class="form-div">
+          <label>Full name</label>
+          <input type="text" name="full-name" id="full-name" />
+        </div>
+        <!-- Title -->
+        <div class="form-div">
+          <label>Title</label>
+          <input type="text" name="job-title" id="job-title" />
+        </div>
+        <!-- Company name -->
+        <div class="form-div">
+          <label>Company Name</label>
+          <input type="text" name="company-name" id="company-name" />
+        </div>
+        <!-- Phone Number -->
+        <div class="form-div">
+          <label>Phone Number</label>
+          <input type="number" name="phone-number" id="phone-number" />
+          <p class="valid-phone-num display-none">
+            Please enter a valid number to continue
+          </p>
+          <p class="phone-num-length display-none">
+            Your number should be 11 digits
+          </p>
+        </div>
+        <!-- Email address -->
+        <div class="form-div">
+          <label>Email Address</label>
+          <input type="email" name="email-address" id="email-address" />
+          <p class="valid-email-address display-none">
+            Please enter a valid email address to continue
+          </p>
+        </div>
+        <!-- Address -->
+        <div class="form-div">
+          <label>Address</label>
+          <input type="text" name="office-address" id="office-address" />
+        </div>
+      </form>
+
+      <!-- button -->
+      <section class="create-card-btn-container">
+        <button class="create-card">create card</button>
+      </section>
+
+      <!-- Customize colors -->
+      <section class="color-container">
+        <h3>Customize Card Color</h3>
+        <p>Choose a color below and click on the business card to customize</p>
+        <input type="color" name="color" id="select-color" />
+      </section>
+
+      <!-- Section -->
+      <p class="click-card-info">Click on card to customize</p>
+
+      <!-- Canvas -->
+      <article class="card-container" id="download-card">
+        <div class="card-header">
+          <img src="/images/kadd-logo.png" alt="logo image here" />
+          <p class="company-name"></p>
+        </div>
+        <div class="body">
+          <h4 class="person-name"></h4>
+          <p class="job-title"></p>
+          <!-- First for phone number -->
+          <div class="phone-number">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <p></p>
+          </div>
+          <!-- Email address -->
+          <div class="email-address">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <p></p>
+          </div>
+          <!-- Third for address -->
+          <div class="address">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <p></p>
+          </div>
+        </div>
+      </article>
+    </main>
+
+    <section class="down-button">
+      <button class="create-another-card">Recreate card</button>
+      <button class="download-card">Download card</button>
+      <a href="#" id="download-link" download="MyBusinessCard.png"></a>
     </section>
 
-    <section class="display-none refresh-page">
-      <p>Please refresh page to create another card</p>
-    </section>
-    <!-- Form -->
-    <form class="form">
-      <!-- Name -->
-      <div class="form-div">
-        <label>Full name</label>
-        <input type="text" name="full-name" id="full-name">
-      </div>
-      <!-- Title -->
-      <div class="form-div">
-        <label>Title</label>
-        <input type="text" name="job-title" id="job-title">
-      </div>
-      <!-- Company name -->
-      <div class="form-div">
-        <label>Company Name</label>
-        <input type="text" name="company-name" id="company-name">
-      </div>
-      <!-- Phone Number -->
-      <div class="form-div">
-        <label>Phone Number</label>
-        <input type="number" name="phone-number" id="phone-number">
-        <p class="valid-phone-num display-none">Please enter a valid number to continue</p>
-        <p class="phone-num-length display-none">Your number should be 11 digits</p>
-      </div>
-      <!-- Email address -->
-      <div class="form-div">
-        <label>Email Address</label>
-        <input type="email" name="email-address" id="email-address">
-        <p class="valid-email-address display-none">Please enter a valid email address to continue</p>
-      </div>
-      <!-- Address -->
-      <div class="form-div">
-        <label>Address</label>
-        <input type="text" name="office-address" id="office-address">
-      </div>
-    </form>
-
-    <!-- button -->
-    <section class="create-card-btn-container">
-      <button class="create-card">create card</button>
-    </section>
-    
-    <!-- Customize colors -->
-    <section class="color-container">
-      <h3>Customize Card Color</h3>
-      <p>Choose a color below and click on the business card to customize</p>
-      <input type="color" name="color" id="select-color">
-    </section>
-
-    <!-- Section -->
-    <p class="click-card-info">Click on card to customize</p>
-
-    <!-- Canvas -->
-    <article class="card-container" id="download-card">
-      <div class="card-header">
-        <img src="/images/kadd-logo.png" alt="logo image here">
-        <p class="company-name"></p>
-      </div>
-      <div class="body">
-      <h4 class="person-name"></h4>
-      <p class="job-title">  </p>
-      <!-- First for phone number -->
-      <div class="phone-number">
-        <i class="fa fa-phone" aria-hidden="true"></i>
-        <p></p>
-      </div>
-      <!-- Email address -->
-      <div class="email-address">
-        <i class="fa fa-envelope" aria-hidden="true"></i>
-        <p></p>
-      </div>
-      <!-- Third for address -->
-      <div class="address">
-        <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p></p>
-      </div>
-      </div>
-    </article>
-
-  </main>
-<!-- Image to be converted -->
-    <img src="" id="imgConverted" alt="">
-  
-  <section class="down-button">
-    <button class="create-another-card">Recreate card</button>
-    <button class="download-card">Download card</button>
-  </section>
- 
-  <script src="/main.js"></script>
-</body>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="/main.js"></script>
+  </body>
 </html>
