--- a/index.html
+++ b/index.html
@@ -27,16 +27,6 @@
       </section>
       <!-- Form -->
       <form class="form">
-        <!-- Photo -->
-        <div>
-          <label for="my-photo">Select a file:</label>
-          <input
-            type="file"
-            id="my-photo"
-            name="my-photo"
-            accept="image/png, image/jpg, image/jpeg"
-          />
-        </div>
         <!-- Name -->
         <div class="form-div">
           <label>Full name</label>
@@ -76,6 +66,16 @@
           <label>Address</label>
           <input type="text" name="office-address" id="office-address" />
         </div>
+        <!-- Select for photo -->
+        <div>
+          <label for="my-photo">Select file for picture:</label>
+          <input
+            type="file"
+            id="my-photo"
+            name="my-photo"
+            accept="image/png, image/jpg, image/jpeg"
+          />
+        </div>
       </form>
 
       <!-- button -->
@@ -99,7 +99,7 @@
           <img
             src="/images/kadd-logo.png"
             alt="logo image here"
-            id="hide-logo"
+            id="person-img"
           />
           <p class="company-name"></p>
         </div>
@@ -125,6 +125,7 @@
       </article>
     </main>
 
+    <br /><br />
     <section class="down-button">
       <button class="create-another-card">Recreate card</button>
       <button class="download-card">Download card</button>
