worked on the card so that I don't need to create paragraphs unnecessarily

--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
           <!-- First for phone number -->
           <div class="phone-number">
             <i class="fa fa-phone" aria-hidden="true"></i>
-            <p></p>
+            <p id="card-phone-number"></p>
           </div>
           <!-- Email address -->
           <div class="email-address">
             <i class="fa fa-envelope" aria-hidden="true"></i>
-            <p></p>
+            <p id="card-email-address"></p>
           </div>
           <!-- Third for address -->
           <div class="address">
             <i class="fa fa-map-marker" aria-hidden="true"></i>
-            <p></p>
+            <p id="card-address"></p>
           </div>
         </div>
       </article>
