Added icon to the title side

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/541d852649.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" type="image/png" href="/images/kadd-logo.png" />
     <link rel="stylesheet" href="style.css" />
     <title>Kadd - business card creator</title>
   </head>
