reduced text on last grid item

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="services-offered-grid-item" data-aos="fade-left" data-aos-once="true">
         <p class="grid-icon"><i class="fa-solid fa-image-portrait"></i></p>
         <h4>Download your ID</h4>
-        <p>Make final adjustments and download your ID card. Share with colleagues and acquintances</p>
+        <p>Make final adjustments and download your ID card.</p>
       </div>
     </section>
 
